--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <a href="/featured.html" class="nav-link">Featured</a>
       <a href="/macboard/" class="nav-link">MacBoard</a>
       <a href="/settings.html" class="nav-link">Settings</a>
+      <a href="houselearning.github.io" class="nav-link">Houselearning</a>
       <div class="right">
         <div class="select help-menu">
           <span class="help-label help-menu">Help</span>
@@ -48,7 +49,7 @@
     </nav>
     <div class="wrap" id="wrap">
       <header class="homeheader">
-        <div class="title" name="Welcome to MecVG!">Welcome to MecVG!</div>
+        <div class="title" name="Welcome to MecVG!">Welcome to quiz-100!</div>
         <div class="sub">
           <b
             style="
@@ -60,7 +61,7 @@
             >Fun, extended:</b
           >
           The first MacVG clone with 200 games.<br />
-          <a href="https://mocvg.github.io/" target="_blank" class="clone">Check out the second clone</a>
+          <a href="https://quiz-120.github.io/" target="_blank" class="clone">Check out the second clone</a>
         </div>
       </header>
       <div class="functions" id="functions">
