--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="/featured.html" class="nav-link">Featured</a>
       <a href="/macboard/" class="nav-link">MacBoard</a>
       <a href="/settings.html" class="nav-link">Settings</a>
-      <a href="houselearning.github.io" class="nav-link">Houselearning</a>
+      <a href="houselearning.html" class="nav-link">Houselearning</a>
       <div class="right">
         <div class="select help-menu">
           <span class="help-label help-menu">Help</span>
