--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
       <a href="/featured.html" class="nav-link">Featured</a>
       <a href="/macboard/" class="nav-link">MacBoard</a>
       <a href="/settings.html" class="nav-link">Settings</a>
-      <a href="houselearning.html" class="nav-link">Houselearning</a>
       <div class="right">
         <div class="select help-menu">
           <span class="help-label help-menu">Help</span>
@@ -49,7 +48,7 @@
     </nav>
     <div class="wrap" id="wrap">
       <header class="homeheader">
-        <div class="title" name="Welcome to MecVG!">Welcome to quiz-100!</div>
+        <div class="title" name="Welcome to quiz-100!">Welcome to quiz-100!</div>
         <div class="sub">
           <b
             style="
