--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title class="cloak">Home | MecVG</title>
+    <title class="cloak">!NEW UPDATE! | quiz-120</title>
     <link class="favicon" rel="icon" type="image/x-icon" href="/logo.png" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="games.css" />
@@ -58,10 +58,9 @@
               display: block;
               font-style: italic;
             "
-            >Fun, extended:</b
-          >
-          The first MacVG clone with 200 games.<br />
-          <a href="https://quiz-120.github.io/" target="_blank" class="clone">Check out the second clone</a>
+            >Sigma, The Only </b>
+          Updates Hit Different, Like This One<br />
+          <a href="http://quiz-120.github.io/retrobowl" target="_blank" class="clone">Click Here, We Have Retro Bowl :) </a>
         </div>
       </header>
       <div class="functions" id="functions">
