--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </nav>
     <div class="wrap" id="wrap">
       <header class="homeheader">
-        <div class="title" name="Welcome to quiz-100!">Welcome to quiz-100!</div>
+        <div class="title" name="Welcome to quiz-100!">Welcome to quiz-120!</div>
         <div class="sub">
           <b
             style="
@@ -60,7 +60,7 @@
             "
             >Sigma, The Only </b>
           Updates Hit Different, Like This One<br />
-          <a href="http://quiz-120.github.io/retrobowl" target="_blank" class="clone">Click Here, We Have Retro Bowl :) </a>
+          <a href="http://quiz-120.github.io/monkeygg2" target="_blank" class="clone"> A Little Gift ) </a>
         </div>
       </header>
       <div class="functions" id="functions">
