changing feedback link and change smtn wit lgo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <nav class="nav" id="nav">
       <a href="/" class="logo2" style="background-color: transparent">
-        <img src="nav-logo.png" alt="MacVG Logo" />
+        <img src="nav-logo.png" alt="quiz-120 Logo" />
       </a>
       <a href="/new.html" class="nav-link">New</a>
       <a href="/trending.html" class="nav-link">Trending</a>
@@ -39,7 +39,7 @@
           <span class="help-label help-menu">Help</span>
           <img src="media/caret.svg" class="caret help-menu" id="caret" />
           <ul id="cats" class="cats help-menu">
-            <a href="https://forms.gle/UpHgbAmLtUPCD5bs8" target="_blank">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc18LB3VCL9Q-m6X5-tT9rc9Zw6N-n8i5BBeuPIC3XFQpYsCw/viewform?usp=dialog" target="_blank">
               Feedback
             </a>
           </ul>
