--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
               font-style: italic;
             "
             >Sigma, The Only </b>
-          Updates Hit Different, Like This One<br />
-          <a href="http://quiz-120.github.io/monkeygg2" target="_blank" class="clone"> A Little Gift ) </a>
+          New Open Source Project Coming Soon...........<br />
+          <a href="http://quiz-120.github.io/monkeygg2" target="_blank" class="clone"> A Little Gift :) </a>
         </div>
       </header>
       <div class="functions" id="functions">
