Update link in index.html to point to new resource

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             "
             >Sigma, The Only </b>
           New Open Source Project Coming Soon...........<br />
-          <a href="http://quiz-120.github.io/monkeygg2" target="_blank" class="clone"> A Little Gift :) </a>
+          <a href="https://tvfrontier-material.github.io/down.png" target="_blank" class="clone"> Learn More </a>
         </div>
       </header>
       <div class="functions" id="functions">
