--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+ <div class="alert-banner">
+    <strong>Official Alert From Zorvanta.</strong> Quiz-120 Will Shut Down On 12/20/25
     <!-- Google tag (gtag.js) -->
     <script
       async
