--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
- <div class="alert-banner">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz-120: SHUTTING DOWN SOON</title>
+    <link rel="stylesheet" href="warn.css"> 
+    <div class="alert-banner">
     <strong>Official Alert From Zorvanta.</strong> Quiz-120 Will Shut Down On 12/20/25
     <!-- Google tag (gtag.js) -->
     <script
